bug 838239 - check for possible DPI change when restoring content from browser history. r=roc